--- a/cyberware/src/main/resources/application.yml
+++ b/cyberware/src/main/resources/application.yml
@@ -2,3 +2,7 @@ server:
   port: 8082
   servlet:
     contextPath: /cyberware
+spring:
+  datasource:
+    url: jdbc:mariadb://localhost:3306/cyberware?user=root&password=password
+    driverClassName: org.mariadb.jdbc.Driver
